# base_server_api_django

./: .env  .env.example  .gitignore  README.md  manage.py  pyproject.toml  vercel.json
api/: settings.py  urls.py
app/authentication/: serializers.py  views.py
app/items/: models.py  serializers.py  urls.py  views.py
app/items/migrations/: 0001_initial.py
app/notifications/: urls.py  views.py
app/users/: urls.py  views.py
