[project]
name = "base-server-api-django"
version = "1.0.0"
description = "API REST with Django + DRF + PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.4",
    "drf-spectacular>=0.28",
    "psycopg2-binary>=2.9",
    "django-cors-headers>=4.7",
    "python-dotenv>=1.1",
    "pyjwt>=2.10",
    "firebase-admin>=6.6",
    "dj-database-url>=2.3",
    "whitenoise>=6.9",
    "requests>=2.32",
]
